--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff",
-  "content_security_policy": "default-src 'self' style-src 'self' 'unsafe-inline';"
+  "background_color": "#ffffff"
 }
